deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edaa
  labels:
    app: edaa
    environment: production
    istio-injection: disabled
