deploy/k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: edaa
  labels:
    app: edaa
    component: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: pg
  selector:
    app: edaa
    component: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: edaa
  labels:
    app: edaa
    component: postgres
    version: blue
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: edaa
      component: postgres
  template:
    metadata:
      labels:
        app: edaa
        component: postgres
        version: blue
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "edaa_user"]
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "edaa_user"]
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: pg-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pg-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 20Gi
